--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@ footer {
                     <div class="tech-icon python" title="Python"><i class="fab fa-python"></i></div>
                 </div>
 
-                <p class="reveal-text delay-200">ManzCode melayani pembuatan Website Portofolio, Toko Online, Undangan Digital, Website Bucin, hingga Website Sekolah dengan desain modern dan profesional.</p>
+                <p class="reveal-text delay-200">ManzCode melayani pembuatan Website Portofolio, Toko Online, Undangan Digital, Website Romantis, hingga Website Sekolah dengan desain modern dan profesional.</p>
                 <div class="hero-buttons reveal-up delay-400">
                     <a href="#pricing" class="btn-primary wobble-hover"><i class="fab fa-whatsapp"></i> Order Sekarang</a>
                     <a href="#services" class="btn-secondary slide-hover">Lihat Layanan</a>
@@ -1239,7 +1239,7 @@ footer {
                     </div>
                     <div class="price-body">
                         <ul>
-                            <li><i class="fas fa-check"></i> Cocok untuk Bucin / Portofolio</li>
+                            <li><i class="fas fa-check"></i> Cocok untuk Web romantis/ Web Portofolio</li>
                             <li><i class="fas fa-check"></i> Tampilan Responsif</li>
                             <li><i class="fas fa-check"></i> Free Hosting</li>
                             <li><i class="fas fa-check"></i> <strong>Revisi: 2x</strong></li>
@@ -1258,10 +1258,9 @@ footer {
                     <div class="price-body">
                         <ul>
                             <li><i class="fas fa-star"></i> <strong>Fitur Lengkap & Custom</strong></li>
-                            <li><i class="fas fa-check"></i> Untuk Toko Online / Sekolah</li>
+                            <li><i class="fas fa-check"></i> Cocok untuk web Toko Online / web Sekolah</li>
                             <li><i class="fas fa-check"></i> Desain Premium</li>
-                            <li><i class="fas fa-check"></i> Free Hosting</li>
-                            <li><i class="fas fa-check"></i> Optimasi SEO Dasar</li>
+                            <li><i class="fas fa-check"></i> Free Hosting</li> 
                             <li class="highlight-feature"><i class="fas fa-infinity"></i> <strong>Bebas Revisi Sepuasnya</strong></li>
                         </ul>
                         <a href="https://wa.me/6282254388144?text=Halo%20ManzCode,%20saya%20tertarik%20order%20Paket%20Recommended%20(Budget%2050k)" class="btn-price primary pulse-btn" target="_blank">Pilih Paket Ini</a>
