--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="7lV8i9ohyNQbfXRpus0oR-a_mdY9hfIBMa8f7Qh-emI" />
     <title>ManzCode.id</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
