--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="7lV8i9ohyNQbfXRpus0oR-a_mdY9hfIBMa8f7Qh-emI" />
-    <title>ManzCode.id</title>
+    <meta name="google-site-verification" content="7lv8i9ohyNQbfXRpusOOr-a_mdY9hfIBMa8f7Qh-emI" />
+    
+    <title>ManzCode.id - Jasa Pembuatan Website Modern & Murah</title>
+    <meta name="description" content="ManzCode melayani pembuatan website portofolio, toko online, undangan digital, dan website sekolah dengan desain modern, cepat, dan harga bersahabat mulai Rp 30rb.">
+    <meta name="keywords" content="ManzCode, jasa web murah, buat website portofolio, website bucin, jasa website sekolah">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { margin: 0; font-family: sans-serif; overflow-x: hidden; }
