--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <title>ManzCode.id - Jasa Pembuatan Website Modern & Murah</title>
     <meta name="description" content="ManzCode melayani pembuatan website portofolio, toko online, undangan digital, dan website sekolah dengan desain modern, cepat, dan harga bersahabat mulai Rp 30rb.">
     <meta name="keywords" content="ManzCode, jasa web murah, buat website portofolio, website bucin, jasa website sekolah">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "serviceType": "Web Development Service",
+  "provider": {
+    "@type": "LocalBusiness",
+    "name": "ManzCode",
+    "url": "https://manz-code.vercel.app/",
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "ID"
+    }
+  },
+  "description": "ManzCode melayani pembuatan Website Portofolio, Toko Online, Undangan Digital, Website Romantis, hingga Website Sekolah dengan desain modern dan profesional.",
+  "offers": {
+    "@type": "Offer",
+    "priceCurrency": "IDR",
+    "price": "30000"
+  }
+}
+</script>
+<script src="https://cdn.tailwindcss.com"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
