--- a/index.html
+++ b/index.html
@@ -1227,7 +1227,7 @@ footer {
                 <div class="example-card glass reveal-up delay-400">
                     <div class="example-icon heart"><i class="fas fa-heart"></i></div>
                     <div class="example-content">
-                        <h3>Website Bucin</h3>
+                        <h3>Website Romantis</h3>
                         <p>Ungkapan perasaan romantis, gamifikasi cinta, dan kenangan manis untuk pasanganmu.</p>
                         <a href="#pricing" class="btn-demo">Pesan Sekarang <i class="fas fa-arrow-right"></i></a>
                     </div>
@@ -1269,7 +1269,7 @@ footer {
                             <li><i class="fas fa-check"></i> Cocok untuk Web romantis/ Web Portofolio</li>
                             <li><i class="fas fa-check"></i> Tampilan Responsif</li>
                             <li><i class="fas fa-check"></i> Free Hosting</li>
-                            <li><i class="fas fa-check"></i> <strong>Revisi: 2x</strong></li>
+                            <li><i class="fas fa-check"></i> <strong>Revisi: 5x</strong></li>
                         </ul>
                         <a href="https://wa.me/6282254388144?text=Halo%20ManzCode,%20saya%20tertarik%20order%20Paket%20Personal%20(Budget%2030k)" class="btn-price" target="_blank">Pilih Paket Ini</a>
                     </div>
@@ -1319,7 +1319,6 @@ footer {
     <footer>
         <div class="container footer-content">
             <p>&copy; <span id="currentYear">2025</span> ManzCode. All Rights Reserved.</p>
-            <p class="credit">Created with <i class="fas fa-heart" style="color:#e25555"></i> by ManzCode</p>
         </div>
     </footer>
 
