Update and rename buatkan_website_jasa_pemb___.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="google-site-verification" content="7lv8i9ohyNQbfXRpusOOr-a_mdY9hfIBMa8f7Qh-emI" />
     <title>ManzCode | Jasa Website & Artikel Termurah</title>
     <meta name="description" content="Jasa pembuatan website dan artikel termurah untuk pelajar dan UMKM.">
     <script src="https://cdn.tailwindcss.com"></script>
