--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="google-site-verification" content="7lv8i9ohyNQbfXRpusOOr-a_mdY9hfIBMa8f7Qh-emI" />
     <title>ManzCode | Jasa Website & Artikel Termurah</title>
     <meta name="description" content="Jasa pembuatan website dan artikel termurah untuk pelajar dan UMKM.">
+<meta name="keywords" content="ManzCode, Manz Code, manzcode, manz code, programming, web development">
+<meta name="author" content="ManzCode">
+<meta name="robots" content="index, follow">
+
+<meta property="og:title" content="ManzCode - Solusi Coding Kreatif">
+<meta property="og:description" content="Jelajahi project dan layanan coding terbaru dari ManzCode.">
+<meta property="og:url" content="https://manz-code.vercel.app">
+<meta property="og:type" content="website">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
